crates/otio-capi/include/otio.h


typedef enum OtioStatus {
    OTIO_STATUS_OK = 0,
    OTIO_STATUS_NULL_POINTER = 1,
    OTIO_STATUS_INVALID_UTF8 = 2,
    OTIO_STATUS_NO_VALUE = 3,
    OTIO_STATUS_STALE_HANDLE = 4,
    OTIO_STATUS_INVALID_ARGUMENT = 5,
    OTIO_STATUS_CORE_ERROR = 6,
    OTIO_STATUS_TIME_ERROR = 7,
    OTIO_STATUS_PARSE_ERROR = 8,
    OTIO_STATUS_UNSUPPORTED = 9,
    OTIO_STATUS_IO_ERROR = 10,
    OTIO_STATUS_PANIC = 11
} OtioStatus;
typedef struct OtioBuffer {
    char *data;
    size_t len;
} OtioBuffer;
typedef struct OtioRationalTime {
    double value;
    double rate;
} OtioRationalTime;
typedef struct OtioTimeRange {
    OtioRationalTime start_time;
    OtioRationalTime duration;
} OtioTimeRange;
typedef struct OtioDocument OtioDocument;
typedef struct OtioNode {
    uint32_t index;
    uint32_t generation;
} OtioNode;
typedef enum OtioNodeKind {
    OTIO_NODE_KIND_ITEM = 0,
    OTIO_NODE_KIND_CLIP = 1,
    OTIO_NODE_KIND_GAP = 2,
    OTIO_NODE_KIND_TRACK = 3,
    OTIO_NODE_KIND_STACK = 4,
    OTIO_NODE_KIND_TIMELINE = 5,
    OTIO_NODE_KIND_TRANSITION = 6,
    OTIO_NODE_KIND_MARKER = 7,
    OTIO_NODE_KIND_EFFECT = 8,
    OTIO_NODE_KIND_TIME_EFFECT = 9,
    OTIO_NODE_KIND_LINEAR_TIME_WARP = 10,
    OTIO_NODE_KIND_FREEZE_FRAME = 11,
    OTIO_NODE_KIND_EXTERNAL_REFERENCE = 12,
    OTIO_NODE_KIND_MISSING_REFERENCE = 13,
    OTIO_NODE_KIND_GENERATOR_REFERENCE = 14,
    OTIO_NODE_KIND_IMAGE_SEQUENCE_REFERENCE = 15,
    OTIO_NODE_KIND_SERIALIZABLE_COLLECTION = 16,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT = 17,
    OTIO_NODE_KIND_SERIALIZABLE_OBJECT_WITH_METADATA = 18,
    OTIO_NODE_KIND_COMPOSABLE = 19,
    OTIO_NODE_KIND_COMPOSITION = 20,
    OTIO_NODE_KIND_MEDIA_REFERENCE = 21,
    OTIO_NODE_KIND_UNKNOWN_SCHEMA = 22,
    OTIO_NODE_KIND_OTHER = 23
} OtioNodeKind;
typedef struct OtioImageSequence {
    int64_t start_frame;
    int64_t frame_step;
    double rate;
    int64_t frame_zero_padding;
    OtioMissingFramePolicy missing_frame_policy;
} OtioImageSequence;
typedef enum OtioNeighborGapPolicy {
    OTIO_NEIGHBOR_GAP_NEVER = 0,
    OTIO_NEIGHBOR_GAP_AROUND_TRANSITIONS = 1
} OtioNeighborGapPolicy;
typedef struct OtioHandles {
    bool has_before;
    OtioRationalTime before;
    bool has_after;
    OtioRationalTime after;
} OtioHandles;
typedef enum OtioReferencePoint {
    OTIO_REFERENCE_POINT_SOURCE = 0,
    OTIO_REFERENCE_POINT_SEQUENCE = 1,
    OTIO_REFERENCE_POINT_FIT = 2
} OtioReferencePoint;
typedef enum OtioFormat {
    OTIO_FORMAT_OTIO_JSON = 0,
    OTIO_FORMAT_ALE = 1,
    OTIO_FORMAT_CMX_3600 = 2,
    OTIO_FORMAT_FCP7_XML = 3,
    OTIO_FORMAT_FCPX_XML = 4
} OtioFormat;
typedef struct OtioReadOptions {
    double rate;
    const char *name_column;
    bool ignore_timecode_mismatch;
} OtioReadOptions;
typedef struct OtioWriteOptions {
    double rate;
    OtioEdlStyle edl_style;
    size_t reelname_len;
    const char *video_format;
} OtioWriteOptions;
OtioDocument *otio_document_new(void);
void otio_document_free(OtioDocument *document);
OtioStatus otio_document_clone(const OtioDocument *source, OtioDocument **out_document);
OtioStatus otio_document_from_json(const char *json, OtioDocument **out_document);
OtioStatus otio_document_read_from_file(const char *path, OtioDocument **out_document);
OtioStatus otio_document_to_json(
    const OtioDocument *source,
    size_t indent,
    OtioBuffer *out_json);
OtioStatus otio_document_write_to_file(
    const OtioDocument *source,
    const char *path,
    size_t indent);
OtioStatus otio_document_root(const OtioDocument *source, OtioNode *out_node);
OtioStatus otio_document_set_root(OtioDocument *target, OtioNode node);
size_t otio_document_node_count(const OtioDocument *source);
bool otio_document_contains(const OtioDocument *source, OtioNode node);
OtioStatus otio_document_remove(OtioDocument *target, OtioNode node);
OtioStatus otio_document_remove_recursive(OtioDocument *target, OtioNode node);
OtioStatus otio_document_absorb(
    OtioDocument *target,
    OtioDocument **source,
    OtioNode *out_from,
    OtioNode *out_to,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_document_deep_clone(
    OtioDocument *target,
    OtioNode node,
    OtioNode *out_node);
OtioStatus otio_clip_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_gap_new(OtioDocument *target, const char *name, OtioNode *out_node);
OtioStatus otio_composition_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_composable_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_effect_new(
    OtioDocument *target,
    const char *name,
    const char *effect_name,
    OtioNode *out_node);
OtioStatus otio_freeze_frame_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_external_reference_new(
    OtioDocument *target,
    const char *name,
    const char *target_url,
    OtioNode *out_node);
OtioStatus otio_generator_reference_new(
    OtioDocument *target,
    const char *name,
    const char *generator_kind,
    OtioNode *out_node);
OtioStatus otio_image_sequence_reference_new(
    OtioDocument *target,
    const char *name,
    OtioNode *out_node);
OtioStatus otio_clip_active_media_reference_key(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_key);
OtioStatus otio_clip_set_active_media_reference_key(
    OtioDocument *target,
    OtioNode node_handle,
    const char *key);
OtioStatus otio_clip_media_reference_count(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t *out_count);
OtioStatus otio_clip_media_reference_key_at(
    const OtioDocument *source,
    OtioNode node_handle,
    size_t index,
    OtioBuffer *out_key);
OtioStatus otio_clip_media_reference(
    const OtioDocument *source,
    OtioNode node_handle,
    const char *key,
    OtioNode *out_reference);
OtioStatus otio_clip_set_media_reference(
    OtioDocument *target,
    OtioNode node_handle,
    const char *key,
    OtioNode reference);
OtioStatus otio_clip_remove_media_reference(
    OtioDocument *target,
    OtioNode node_handle,
    const char *key,
    OtioNode *out_reference);
OtioStatus otio_effect_effect_name(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_name);
OtioStatus otio_effect_set_effect_name(
    OtioDocument *target,
    OtioNode node_handle,
    const char *effect_name);
OtioStatus otio_effect_enabled(
    const OtioDocument *source,
    OtioNode node_handle,
    bool *out_enabled);
OtioStatus otio_effect_set_enabled(
    OtioDocument *target,
    OtioNode node_handle,
    bool enabled);
OtioStatus otio_effect_time_scalar(
    const OtioDocument *source,
    OtioNode node_handle,
    double *out_scalar);
OtioStatus otio_effect_set_time_scalar(
    OtioDocument *target,
    OtioNode node_handle,
    double scalar);
OtioStatus otio_external_reference_target_url(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_url);
OtioStatus otio_external_reference_set_target_url(
    OtioDocument *target,
    OtioNode node_handle,
    const char *url);
OtioStatus otio_generator_reference_kind(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_kind);
OtioStatus otio_generator_reference_set_kind(
    OtioDocument *target,
    OtioNode node_handle,
    const char *kind);
OtioStatus otio_image_sequence_reference_numbers(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioImageSequence *out_numbers);
OtioStatus otio_image_sequence_reference_name_prefix(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_prefix);
OtioStatus otio_image_sequence_reference_set_name_prefix(
    OtioDocument *target,
    OtioNode node_handle,
    const char *prefix);
OtioStatus otio_image_sequence_reference_name_suffix(
    const OtioDocument *source,
    OtioNode node_handle,
    OtioBuffer *out_suffix);
OtioStatus otio_composition_insert_child(
    OtioDocument *target,
    OtioNode parent,
    int64_t index,
    OtioNode child);
OtioStatus otio_composition_append_child(
    OtioDocument *target,
    OtioNode parent,
    OtioNode child);
OtioStatus otio_composition_remove_child(
    OtioDocument *target,
    OtioNode parent,
    int64_t index,
    OtioNode *out_child);
OtioStatus otio_composition_detach_child(
    OtioDocument *target,
    OtioNode parent,
    OtioNode child);
OtioStatus otio_composition_clear_children(
    OtioDocument *target,
    OtioNode parent,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_composition_index_of_child(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode child,
    size_t *out_index);
OtioStatus otio_composition_has_child(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode child,
    bool *out_has);
OtioStatus otio_composition_is_parent_of(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode other,
    bool *out_is);
OtioStatus otio_composition_find_children_of_kind(
    const OtioDocument *source,
    OtioNode parent,
    OtioNodeKind kind,
    const OtioTimeRange *search_range,
    bool shallow,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_composition_range_of_child_at_index(
    const OtioDocument *source,
    OtioNode parent,
    int64_t index,
    OtioTimeRange *out_range);
OtioStatus otio_composition_trimmed_range_of_child_at_index(
    const OtioDocument *source,
    OtioNode parent,
    int64_t index,
    OtioTimeRange *out_range);
OtioStatus otio_composition_range_of_child(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode child,
    OtioTimeRange *out_range);
OtioStatus otio_composition_trimmed_range_of_child(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode child,
    OtioTimeRange *out_range);
OtioStatus otio_composition_trim_child_range(
    const OtioDocument *source,
    OtioNode parent,
    OtioTimeRange child_range,
    OtioTimeRange *out_range);
OtioStatus otio_composition_ranges_of_children(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode *out_nodes,
    OtioTimeRange *out_ranges,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_composition_child_at_time(
    const OtioDocument *source,
    OtioNode parent,
    OtioRationalTime time,
    bool shallow,
    OtioNode *out_child);
OtioStatus otio_composition_children_in_range(
    const OtioDocument *source,
    OtioNode parent,
    OtioTimeRange search_range,
    OtioNode *out_nodes,
    size_t capacity,
    size_t *out_count);
OtioStatus otio_composition_handles_of_child(
    const OtioDocument *source,
    OtioNode parent,
    OtioNode child,
    OtioHandles *out_handles);
OtioStatus otio_composition_neighbors_of(
    OtioDocument *target,
    OtioNode parent,
    OtioNode child,
    OtioNeighborGapPolicy policy,
    OtioNode *out_before,
    OtioNode *out_after);
OtioStatus otio_edit_overwrite(
    OtioDocument *target,
    OtioNode item,
    OtioNode composition,
    OtioTimeRange range,
    bool remove_transitions,
    OtioNode fill_template);
OtioStatus otio_edit_insert(
    OtioDocument *target,
    OtioNode item,
    OtioNode composition,
    OtioRationalTime time,
    bool remove_transitions,
    OtioNode fill_template);
OtioStatus otio_edit_trim(
    OtioDocument *target,
    OtioNode item,
    OtioRationalTime delta_in,
    OtioRationalTime delta_out,
    OtioNode fill_template);
OtioStatus otio_edit_slice(
    OtioDocument *target,
    OtioNode composition,
    OtioRationalTime time,
    bool remove_transitions);
OtioStatus otio_edit_slip(OtioDocument *target, OtioNode item, OtioRationalTime delta);
OtioStatus otio_edit_slide(OtioDocument *target, OtioNode item, OtioRationalTime delta);
OtioStatus otio_edit_ripple(
    OtioDocument *target,
    OtioNode item,
    OtioRationalTime delta_in,
    OtioRationalTime delta_out);
OtioStatus otio_edit_roll(
    OtioDocument *target,
    OtioNode item,
    OtioRationalTime delta_in,
    OtioRationalTime delta_out);
OtioStatus otio_edit_fill(
    OtioDocument *target,
    OtioNode item,
    OtioNode track,
    OtioRationalTime track_time,
    OtioReferencePoint reference_point);
OtioStatus otio_edit_remove(
    OtioDocument *target,
    OtioNode composition,
    OtioRationalTime time,
    bool fill,
    OtioNode fill_template);
OtioStatus otio_algorithm_track_trimmed_to_range(
    OtioDocument *target,
    OtioNode track,
    OtioTimeRange trim_range,
    OtioNode *out_track);
OtioStatus otio_algorithm_flatten_stack(
    OtioDocument *target,
    OtioNode stack,
    OtioNode *out_track);
OtioStatus otio_algorithm_flatten_tracks(
    OtioDocument *target,
    const OtioNode *tracks,
    size_t count,
    OtioNode *out_track);
OtioReadOptions otio_read_options_default(void);
OtioWriteOptions otio_write_options_default(void);
const char *otio_format_name(OtioFormat format);
OtioStatus otio_format_from_suffix(const char *suffix, OtioFormat *out_format);
OtioStatus otio_read_from_bytes(
    OtioFormat format,
    const uint8_t *data,
    size_t len,
    const OtioReadOptions *options,
    OtioDocument **out_document);
OtioStatus otio_read_from_file(
    OtioFormat format,
    const char *path,
    const OtioReadOptions *options,
    OtioDocument **out_document);
OtioStatus otio_write_to_bytes(
    OtioFormat format,
    const OtioDocument *source,
    const OtioWriteOptions *options,
    OtioBuffer *out_bytes);
OtioStatus otio_write_to_file(
    OtioFormat format,
    const OtioDocument *source,
    const char *path,
    const OtioWriteOptions *options);