sdk/zig/src/c.zig


pub extern fn otio_read_from_bytes(format: Format, data: ?[*]const u8, len: usize, options: ?*const ReadOptions, out_document: *?*Document, out_error: ?*Buffer) Status;
pub extern fn otio_read_from_file(format: Format, path: [*:0]const u8, options: ?*const ReadOptions, out_document: *?*Document, out_error: ?*Buffer) Status;
pub extern fn otio_read_options_default() ReadOptions;
pub extern fn otio_write_options_default() WriteOptions;
pub extern fn otio_write_to_bytes(format: Format, source: *Document, options: ?*const WriteOptions, out_bytes: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_write_to_file(format: Format, source: *Document, path: [*:0]const u8, options: ?*const WriteOptions, out_error: ?*Buffer) Status;
pub extern fn otio_algorithm_flatten_stack(target: *Document, stack: NodeHandle, out_track: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_algorithm_flatten_tracks(target: *Document, tracks: ?[*]const NodeHandle, count: usize, out_track: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_algorithm_track_trimmed_to_range(target: *Document, track: NodeHandle, trim_range: TimeRange, out_track: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_clip_active_media_reference_key(source: *Document, node_handle: NodeHandle, out_key: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_clip_media_reference(source: *Document, node_handle: NodeHandle, key: ?[*:0]const u8, out_reference: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_clip_media_reference_count(source: *Document, node_handle: NodeHandle, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_clip_media_reference_key_at(source: *Document, node_handle: NodeHandle, index: usize, out_key: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_clip_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_clip_remove_media_reference(target: *Document, node_handle: NodeHandle, key: [*:0]const u8, out_reference: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_clip_set_active_media_reference_key(target: *Document, node_handle: NodeHandle, key: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_clip_set_media_reference(target: *Document, node_handle: NodeHandle, key: [*:0]const u8, reference: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composable_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_append_child(target: *Document, parent: NodeHandle, child: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_child_at_time(source: *Document, parent: NodeHandle, time: RationalTime, shallow: bool, out_child: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_children_in_range(source: *Document, parent: NodeHandle, search_range: TimeRange, out_nodes: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_composition_clear_children(target: *Document, parent: NodeHandle, out_nodes: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_composition_detach_child(target: *Document, parent: NodeHandle, child: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_find_children_of_kind(source: *Document, parent: NodeHandle, kind: NodeKind, search_range: ?*const TimeRange, shallow: bool, out_nodes: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_composition_handles_of_child(source: *Document, parent: NodeHandle, child: NodeHandle, out_handles: *Handles, out_error: ?*Buffer) Status;
pub extern fn otio_composition_has_child(source: *Document, parent: NodeHandle, child: NodeHandle, out_has: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_composition_index_of_child(source: *Document, parent: NodeHandle, child: NodeHandle, out_index: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_composition_insert_child(target: *Document, parent: NodeHandle, index: i64, child: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_is_parent_of(source: *Document, parent: NodeHandle, other: NodeHandle, out_is: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_composition_neighbors_of(target: *Document, parent: NodeHandle, child: NodeHandle, policy: NeighborGapPolicy, out_before: *NodeHandle, out_after: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_range_of_child(source: *Document, parent: NodeHandle, child: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_composition_range_of_child_at_index(source: *Document, parent: NodeHandle, index: i64, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_composition_ranges_of_children(source: *Document, parent: NodeHandle, out_nodes: ?[*]NodeHandle, out_ranges: ?[*]TimeRange, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_composition_remove_child(target: *Document, parent: NodeHandle, index: i64, out_child: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_composition_trim_child_range(source: *Document, parent: NodeHandle, child_range: TimeRange, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_composition_trimmed_range_of_child(source: *Document, parent: NodeHandle, child: NodeHandle, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_composition_trimmed_range_of_child_at_index(source: *Document, parent: NodeHandle, index: i64, out_range: *TimeRange, out_error: ?*Buffer) Status;
pub extern fn otio_document_absorb(target: *Document, source: *?*Document, out_from: ?[*]NodeHandle, out_to: ?[*]NodeHandle, capacity: usize, out_count: *usize, out_error: ?*Buffer) Status;
pub extern fn otio_document_clone(source: *Document, out_document: *?*Document, out_error: ?*Buffer) Status;
pub extern fn otio_document_contains(source: *Document, node: NodeHandle) bool;
pub extern fn otio_document_deep_clone(target: *Document, node: NodeHandle, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_document_free(document: *Document) void;
pub extern fn otio_document_from_json(json: [*:0]const u8, out_document: *?*Document, out_error: ?*Buffer) Status;
pub extern fn otio_document_new() ?*Document;
pub extern fn otio_document_node_count(source: *Document) usize;
pub extern fn otio_document_read_from_file(path: [*:0]const u8, out_document: *?*Document, out_error: ?*Buffer) Status;
pub extern fn otio_document_remove(target: *Document, node: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_document_remove_recursive(target: *Document, node: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_document_root(source: *Document, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_document_set_root(target: *Document, node: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_document_to_json(source: *Document, indent: usize, out_json: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_document_write_to_file(source: *Document, path: [*:0]const u8, indent: usize, out_error: ?*Buffer) Status;
pub extern fn otio_edit_fill(target: *Document, item: NodeHandle, track: NodeHandle, track_time: RationalTime, reference_point: ReferencePoint, out_error: ?*Buffer) Status;
pub extern fn otio_edit_insert(target: *Document, item: NodeHandle, composition: NodeHandle, time: RationalTime, remove_transitions: bool, fill_template: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_edit_overwrite(target: *Document, item: NodeHandle, composition: NodeHandle, range: TimeRange, remove_transitions: bool, fill_template: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_edit_remove(target: *Document, composition: NodeHandle, time: RationalTime, fill: bool, fill_template: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_edit_ripple(target: *Document, item: NodeHandle, delta_in: RationalTime, delta_out: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_edit_roll(target: *Document, item: NodeHandle, delta_in: RationalTime, delta_out: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_edit_slice(target: *Document, composition: NodeHandle, time: RationalTime, remove_transitions: bool, out_error: ?*Buffer) Status;
pub extern fn otio_edit_slide(target: *Document, item: NodeHandle, delta: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_edit_slip(target: *Document, item: NodeHandle, delta: RationalTime, out_error: ?*Buffer) Status;
pub extern fn otio_edit_trim(target: *Document, item: NodeHandle, delta_in: RationalTime, delta_out: RationalTime, fill_template: NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_effect_effect_name(source: *Document, node_handle: NodeHandle, out_name: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_effect_enabled(source: *Document, node_handle: NodeHandle, out_enabled: *bool, out_error: ?*Buffer) Status;
pub extern fn otio_effect_new(target: *Document, name: ?[*:0]const u8, effect_name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_effect_set_effect_name(target: *Document, node_handle: NodeHandle, effect_name: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_effect_set_enabled(target: *Document, node_handle: NodeHandle, enabled: bool, out_error: ?*Buffer) Status;
pub extern fn otio_effect_set_time_scalar(target: *Document, node_handle: NodeHandle, scalar: f64, out_error: ?*Buffer) Status;
pub extern fn otio_effect_time_scalar(source: *Document, node_handle: NodeHandle, out_scalar: *f64, out_error: ?*Buffer) Status;
pub extern fn otio_external_reference_new(target: *Document, name: ?[*:0]const u8, target_url: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_external_reference_set_target_url(target: *Document, node_handle: NodeHandle, url: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_external_reference_target_url(source: *Document, node_handle: NodeHandle, out_url: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_format_from_suffix(suffix: [*:0]const u8, out_format: *Format, out_error: ?*Buffer) Status;
pub extern fn otio_format_name(format: Format) [*:0]const u8;
pub extern fn otio_freeze_frame_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_gap_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_generator_reference_kind(source: *Document, node_handle: NodeHandle, out_kind: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_generator_reference_new(target: *Document, name: ?[*:0]const u8, generator_kind: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_generator_reference_set_kind(target: *Document, node_handle: NodeHandle, kind: [*:0]const u8, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_name_prefix(source: *Document, node_handle: NodeHandle, out_prefix: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_name_suffix(source: *Document, node_handle: NodeHandle, out_suffix: *Buffer, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_new(target: *Document, name: ?[*:0]const u8, out_node: *NodeHandle, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_numbers(source: *Document, node_handle: NodeHandle, out_numbers: *ImageSequence, out_error: ?*Buffer) Status;
pub extern fn otio_image_sequence_reference_set_name_prefix(target: *Document, node_handle: NodeHandle, prefix: [*:0]const u8, out_error: ?*Buffer) Status;
